# context_module

./: .gitignore  FRONTEND_ARCHITECTURE.md  FRONTEND_MAP.md  INTEGRATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  REPO_INGESTION_SUMMARY.md  dashboard.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent_loop.py  server.py  test_server.py  verify_install.bat  verify_install.sh  verify_qdrant.py  verify_resume_pack.py  writing_agent.py
.github/workflows/: ci.yml
aos_context/: __init__.py  cli.py  config.py  context_brief.py  episode.py  ledger.py  llm_adapter.py  memory.py  memory_qdrant.py  resume_pack.py  token_estimator.py  validation.py  ws_manager.py
aos_context/api/: main.py
aos_context/schemas/: episode.v2.1.schema.json  ledger_event.v2.1.schema.json  mcr.v2.1.schema.json  memory_item.v2.1.schema.json  resume_pack_manifest.v2.1.schema.json  working_set.v2.1.schema.json  ws_patch.v2.1.schema.json
aos_context/static/: index.html
examples/: agent_integration_example.py  llm_adapter_example.py
tests/: conftest.py  integration_test.py  test_api.py  test_validation.py  test_ws_manager.py
